moved dark to App and fixed contrast error in dark

--- a/src/frontend/styles/App.css
+++ b/src/frontend/styles/App.css
@@ -22,7 +22,7 @@
     --about-icon: #E0E0E0;
 }
 
-[data-theme="dark"]{
+[data-theme="dark"] {
     --main-background: #1B1B1B;
     --note-text: #D5D5D5;
     --preview-background: #4D4D4D;
@@ -40,6 +40,11 @@
     --card-shadow: #A8A8A8;
     --about-footer: #1E1E1E;
     --about-icon: #C286FF;
+}
+
+#bootstrap-overrides {
+    color: var(--note-text);
+    background-color: var(--main-background);
 }
 
 /* HomePage.js */
@@ -85,7 +90,7 @@ code {
     monospace;
 }
 
-p{
+p {
     margin: 0px;
     font-size: .75em;
     text-align: left;
@@ -95,7 +100,7 @@ textarea {
     background-color: var(--main-background);
 }
 
-::placeholder{
+::placeholder {
     color: var(--note-text);
 }
 
@@ -103,7 +108,7 @@ textarea {
 .btn_elem { width: 20%; }
 
 /* HomePage.js */
-.my-container{
+.my-container {
     height: 92vh;
 }
 .grid-container {
@@ -276,7 +281,7 @@ textarea {
     background-color: var(--main-background);
 }
 
-#note-body{
+#note-body {
     width: 100%;
     height: 78%;
     border: none;
@@ -291,7 +296,7 @@ textarea {
     overflow-y: scroll;
 }
 
-#note-title{
+#note-title {
     width: 100%;
     min-height: 12%;
     overflow: none;
@@ -311,16 +316,16 @@ textarea {
 
 /* SideBar.js */
 
-aside{
+aside {
     background-color: var(--main-background);  
 }
 
-.search-add{
+.search-add {
     height: 8vh;
     text-align: center;
 }
 
-.notelist{
+.notelist {
     list-style-type: none;
 }
 
@@ -335,7 +340,7 @@ aside{
 
 /* EditBar.js */
 
-.editbar{
+.editbar {
     display:flex;
     min-height: 6%;
     justify-content: flex-end;
@@ -343,25 +348,25 @@ aside{
     background-color: var(--edit-bar);
 }
 
-.editbar-button{
+.editbar-button {
     padding: 0% 2% 0% 2%;
     font-size: 1.5em;
     color: var(--active-button2);
     background-color: var(--edit-bar)
 }
 
-.editbar-button:hover:enabled, .editbar-button:focus:enabled{
+.editbar-button:hover:enabled, .editbar-button:focus:enabled {
     border-radius: 5px;
     background-color: var(--editbar-hover);
 }
 
-.editbar-button:disabled{
+.editbar-button:disabled {
     color: var(--disable-button);
     color: #9F9F9F;
     border: none;
 }
 
-.edit-text{
+.edit-text {
     margin-right:auto;
     color: var(--active-button2);
     align-self:center;
@@ -384,7 +389,7 @@ aside{
     padding: 4%;
 }
 
-input.search{
+input.search {
     background-color: var(--preview-background);
     color: var(--note-text);
 }
@@ -403,13 +408,13 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 /* Editor.js */
-.editor{
+.editor {
     height: 100%;
 }
 
 /* AddButton.js */
 
-.add-button{
+.add-button {
     border-radius: 50px;
     color: white;
     background-color: var(--active-button1);
@@ -420,17 +425,17 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
     line-height: 100%;
 }
 
-#new-icon{
+#new-icon {
     font-size: 1.5em;
     font-weight: 900;
 }
 
-.add-button:hover, .add-button:focus{
+.add-button:hover, .add-button:focus {
     border: none;
     transform: scale(1.05);
 }
 
-.visually-hidden{
+.visually-hidden {
     border: 0;
     clip: rect(0 0 0 0);
     height: 1px;
@@ -443,7 +448,7 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 /* NotePreview.js */
 
-.card-container{
+.card-container {
     overflow: hidden;
     margin: auto;
     margin-top: 5% 0% 10% 0%;
@@ -454,30 +459,30 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
     overflow: hidden;
 }
 
-.card-container:hover, .card-container:focus{
+.card-container:hover, .card-container:focus {
     transform: scale(1.025);
     text-decoration: none;
 }
 
-.card-content{
+.card-content {
     margin: 0px;
     margin-top: 0.2rem;
     border-bottom: solid 5px var(--preview-background);
     overflow:hidden;
 }
 
-.card-content:hover, .card-content:focus{
+.card-content:hover, .card-content:focus {
     text-decoration: none;
 }
 
-.card-body{
+.card-body {
     display:block;
     margin: auto;
     padding: 2%;
     overflow: hidden;
 }
 
-.card-title{
+.card-title {
     font-size: 1.5em;
     text-align: center;
     padding: 2%;
@@ -486,7 +491,7 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 /* NavBar.js */
 
-.main-navbar{
+.main-navbar {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     min-height: 8vh;
@@ -499,7 +504,7 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 
 
-.navbar-button{
+.navbar-button {
     display: flex;
     width: 100%;
     height: 100%;
@@ -512,38 +517,38 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
     text-decoration: none;
 }
 
-.navbar-button:hover, .navbar-button:focus{
+.navbar-button:hover, .navbar-button:focus {
     background-color: var(--navbar-hover);
     text-decoration: none;
     color: white;
 }
 
-#logo{
+#logo {
     width: 5vh;
 }
 
-#home-button{
+#home-button {
     grid-column: 5;
 }
 
 
-#dark-button{
+#dark-button {
     grid-column: 6;
 }
 
 
-#contact-button{
+#contact-button {
     grid-column: 7;
 }
 
 
-#about-button{
+#about-button {
     grid-column: 8;
 }
 
 /* About.js */
 
-.about-container{
+.about-container {
     height: 76vh;
     padding: 6% 8% 6% 8%;
     font-size: 1.5em;
@@ -551,43 +556,43 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
     overflow-y: auto;
 }
 
-.about-text{
+.about-text {
     color: var(--note-text);
 }
 
-.about-icon{
+.about-icon {
     display: inline-block;
     padding: 2%;
     color: var(--about-icon);
     font-size: 1.75em;
 }
 
-.about-footer{
+.about-footer {
     height: 16vh;
     display: flex;
     justify-content: space-around;
     background-color: var(--about-footer);
 }
 
-.about-header{
+.about-header {
     color: var(--note-text);
 }
 
-.about-text{
+.about-text {
     color: var(--note-text);
     margin-bottom: 5%;
 }
 
 /* Contact.js */
 
-.contact-container{
+.contact-container {
     display:flex;
     background: var(--main-background);
 }
 
 /* ContactCard.js */
   
-.contact-card{
+.contact-card {
     font-size: 1.25em; 
     margin: 5%; 
     border: 1px solid black;
@@ -598,34 +603,34 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
     background-color: var(--preview-background);
 }
 
-.content-box{
+.content-box {
     text-align: center;
 }
 
-.contact-title{
+.contact-title {
   text-align: center;
   color: var(--note-text);
 }
 
-h2{
+h2 {
   padding: 0px;
   margin: 0px;
 }
 
-.contact-image{
+.contact-image {
   display:block;
   max-width: 50%;
   margin: 5% auto 5% auto;
   border-radius: 50%;
 }
 
-.contact-link{
+.contact-link {
     text-align: center;
     color: var(--note-text);
     margin: 5%;
 }
 
-.contact-link:hover, .contact-link:focus{
+.contact-link:hover, .contact-link:focus {
     text-align: center;
     text-decoration: none;
 }
